--- a/style/style.css
+++ b/style/style.css
@@ -64,12 +64,17 @@ nav{
 .section-image{
     text-align: center;
     margin: 80px;
+    
+}
+.img-carrusel{
+    height: 500px;
+    width: 800px;
 }
 
 #contenedorContenedor{
     display: flex;
-    flex-direction: wrap;
-    margin: 10%;
+    flex-wrap: wrap;
+    margin: 1%;
     font-size: 20px;
     font-size: 20px;
 }
@@ -79,12 +84,16 @@ nav{
     background-color: #115c7a;
     display: flex;
     flex-direction: wrap;
-    align-items: stretch;
+    
 }
 
 .container > div> h3{
     font-size: 20px;
     margin: 10px;
+    color: #d0d7df;;
+    background-color: #0e4155;
+    padding: 5px;
+
 }
 
 .container > div> img{
@@ -93,6 +102,23 @@ nav{
     margin: 10px;
     
 }
+
+.container> div> img:hover {
+    filter: blur(5px);
+}
+
+.container > div> p{
+    font-size: 15px;
+    margin: 10px;
+    color: #d0d7df;
+    opacity: .7;
+    background-color: #0e4155;
+    padding: 5px;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 300px;
+    width: 200px;
+}
+
 
 
 
